--- a/test.css
+++ b/test.css
@@ -1,3 +1,8 @@
+.yui3-spriteeditor {
+  position: absolute;
+  left: 50%;
+}
+
 .yui3-spriteeditor-grid-cell {
   -webkit-user-drag: none;
   -webkit-user-select: none;
